# humanoids-robotics-rag-agent

./: .gitignore  Dockerfile  PERFORMANCE_OPTIMIZATION.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SECURITY_REVIEW.md  VERIFICATION.md  app.py  cli.py  main.py  pyproject.toml  requirements.txt  server.py  test_cli_compatibility.py  test_cli_quick_verification.py  test_e2e.py  test_integration.py  test_integration_simple.py  test_performance.py
api/: __init__.py  chat.py
app/: __init__.py  agent.py  main.py
middleware/: __init__.py  auth.py  rate_limit.py
models/: __init__.py  chat_request.py  chat_response.py  chat_session.py  source_citation.py  user_session.py
rag_chatbot/: __init__.py
services/: __init__.py  chat_service.py
utils/: input_sanitizer.py  logger_config.py  performance_monitor.py  rate_limiter.py
