[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.20.0",
    "dotenv>=0.9.9",
    "fastapi>=0.125.0",
    "openai>=2.13.0",
    "openai-agents>=0.6.4",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.38.0",
]
